00-ingress/test-gw-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-gw
  labels:
    istio-injection: enabled
