00-ingress/httpbin-gateway-host-multi.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 9999
      name: http-test1
      protocol: HTTP
    hosts:
    - "cherry.istio.com"
  - port:
      number: 7777
      name: http-test2
      protocol: HTTP
    hosts:
    - "cherry.istio.com"
