00-ingress/httpbin-gateway-host.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "cherry.istio.com"
