00-ingress/httpbin-virtualservice-host-multi.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "cherry.istio.com"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - port: 7777
      uri: 
        prefix: /status
    - port: 9999
      uri:
        prefix: /delay
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
