00-ingress/httpbin-virtualservice-host.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "cherry.istio.com"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /status
    - port: 8080
      uri:
        prefix: /delay
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
