00-ingress/httpbin-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-gw-httpbin
  namespace: test-gw
spec:
  hosts:
  - "httpbin-test-gw.127.0.0.1.nip.io"
  gateways:
  - test-gw-httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /delay
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
